# api/controllers/issues.js
@@ -1,8 +1,16 @@
 'use strict';
 
-// const fs = require('fs');
+require('mongoose')
 
 const Issue = require('../models/issue');
+
+function create(req, res) {
+    const body = req.swagger.params.body.value;
+    Issue.create(body, (err, issue) => {
+        if (err) return void res.status(500).send(err);
+        res.status(201).json(issue);
+    });
+}
 
 function getByID(req, res) {
     const criteria = { _id: req.swagger.params._id.value };
@@ -22,18 +30,7 @@ function index(req, res) {
 }
 
 module.exports = {
-    create: (req, res) => {
-        const body = req.swagger.params.body.value;
-        Issue.create(body, (err, issue) => {
-            if (err) return void res.status(500).send(err);
-            res.status(201).json(issue);
-        });
-        // fs.writeFile(__dirname + '/' + 'originalname.png', req.swagger.params.upfile.value.buffer, (writeFileErr) => {
-        //     if (writeFileErr) return void res.status(500).send(writeFileErr);
-        //     res.sendStatus(201);
-        //     // res.status(201).send({ created: true });
-        // });
-    },
+    create,
     getByID,
     index
 };
