# api/models/issue.js
@@ -1,10 +1,9 @@
 'use strict';
 const mongoose = require('mongoose');
-require('mongoose-uuid2')(mongoose);
 
 const IssueSchema = mongoose.Schema({
     name: String,
-    files: [mongoose.Types.UUID]
+    files: [mongoose.Schema.Types.ObjectId]
 });
 
 module.exports = mongoose.model('issues', IssueSchema);
